  History of user-visible changes.
  December 10, 2005

Copyright (C) 2002, 2004, 2005  Free Software Foundation, Inc.
See the end for copying conditions.

Please send remake bug reports to <rocky@panix.com>.
See the README file and the GNU remake manual for details on sending bug
reports.

Version 3.80+dbg-0.6cvs

* On a fatal error we now show command arguments used to invoke
  program.

* The default behavior on error is to show call trace. To turn off use
  --no-extended-errors. Recently added --extended-errors and -E (not in
  standard GNU Make) have been removed.

* "quit" can now terminate several levels of nested make (if "make"
  was called directly and not via a shell string).

* prompt now shows target and prerequisites.

* Fix bugs and memory leaks involving improper use of memory can weak
  casting.  (shown in the vpath regression test dash-I on cygwin).

* Reorganize help command. Is more ddd-friendly (and more gdb like).

* More explicit frees of memory at termination. 

* Give line numbers and target names on --just-print.

* Expand documentation.

Version 3.80+dbg-0.5

* Errors in eval issued from the debugger no longer cause termination.

* Separation of "Step" and "Next. "Step" command granularity is now
  "Next". "Step" stepping is more fine grained.

* "target" command improvements:
   - sets file variables when showing is requested
   - add "target expand" to list target commands with "make" variables
     expanded.
   - allow @ or $@ as a target name 

* Add "info makefiles" to show what Makefiles have been read in.

* Add "info breakpoints"

* Breakpoints can now be listed and deleted by number - like gdb.
  This also helps ddd and should pave the way for more sophisticated
  kinds of breaking/watching.

* Add a number of aliases (e.g. backtrace, bt, !!, L)
  and via an internal alias mechanism

* Remove hash stats on printing variables -- generally not wanted for
  users (rather than GNU Make maintainers)
